# vsphere-prow-summary

./: .gitignore  AGENTS.md  README.md  pyproject.toml
tests/: test_installer.py
vsphere_monitor/: __main__.py  analyzer.py  cli.py  fetcher.py  formatters.py  installer.py  llm.py  tui.py
vsphere_prow_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
