[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsphere-prow-monitor"
version = "0.1.0"
description = "Monitor vSphere periodic Prow CI jobs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "textual>=1.0",
    "anthropic>=0.40",
]

[project.scripts]
vsphere-monitor = "vsphere_monitor.cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]
