[project]
name = "vsphere-prow-monitor"
version = "0.1.0"
description = "Monitor vSphere periodic Prow CI jobs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "textual>=1.0",
    "anthropic>=0.40",
]

[project.scripts]
vsphere-monitor = "vsphere_monitor.cli:main"

[dependency-groups]
dev = ["ruff", "mypy", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vsphere_monitor"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["vsphere_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
